# pubky-knowledge-base-starlight

./: .gitignore  .llms-generation  README.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: check-llms-freshness.yml  check-snippets.yml  deploy.yml
plugins/: remark-snippet.mjs
public/: llms-full.txt  llms.txt
scripts/: cleanup-llms-raw.mjs  copy-md-sources.mjs  generate-llms.mjs
snippets/js/: eslint.config.js  package-lock.json  package.json  tsconfig.json
snippets/js/src/: init-client.ts  profile-storage.ts  sdk.ts  testnet-client.ts
snippets/react-native/: package-lock.json  package.json  tsconfig.json
snippets/react-native/src/: auth.ts  basic-usage.ts  data-ops.ts  key-management.ts  resolve.ts  social-profile.ts
snippets/rust/: Cargo.toml
snippets/rust/src/: lib.rs
src/components/: Hero.astro  InstallBlock.astro  SocialIcons.astro  ThemeProvider.astro  ThemeSelect.astro
src/content/docs/: architecture.md  comparisons.md  contributing.md  faq.md  getting-started.md  glossary.md  index.mdx  overview.md  resources.md  the-vision-of-pubky.md  tldr.md  troubleshooting.md
src/content/docs/explore/concepts/: censorship.md  credible-exit.md  semantic-social-graph.md
src/content/docs/explore/pubky-apps/: app-specs.md  eli5.md  introduction.md
src/content/docs/explore/pubkycore/: api.md  authentication.md  eli5.md  homeserver.md  introduction.md  sdk.md  security-model.md
src/content/docs/explore/technologies/: dht.md  dns.md  doh.md  homegate.md  http-relay.md  https.md  jeb-pubky-ai-bot.md  (+11 more)
src/styles/: custom.css
(+26 files in other folders)
