[package]
name = "pubky-doc-snippets"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pubky = { version = "0.7.0" }
pubky-testnet = { version = "0.7.0", features = ["embedded-postgres"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
testnet = ["dep:pubky-testnet"]
