[package]
name = "pubky-doc-snippets"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false

[dependencies]
pubky = { version = "0.7.0" }
pubky-testnet = { version = "0.7.0", features = ["embedded-postgres"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
testnet = ["dep:pubky-testnet"]

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
all = { level = "warn", priority = -1 }
